Update roadmap (quickWins, longTermBets) and metrics in content.json; adjust section titles and metrics for clarity

--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/dezerv-ai-navigator/" />
+    <meta http-equiv="refresh" content="0; url=/jar-product-case-study/" />
     <script>
       // For client-side routing (React Router, etc.)
       var l = window.location;
-      var path = l.pathname.replace(/\/+/g, '/').replace('/dezerv-ai-navigator', '');
-      window.location.replace('/dezerv-ai-navigator/#' + path + l.search + l.hash);
+      var path = l.pathname.replace(/\/+/g, '/').replace('/jar-product-case-study', '');
+      window.location.replace('/jar-product-case-study/#' + path + l.search + l.hash);
     </script>
   </head>
   <body></body>
