--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dezerv AI Compass - Hyper-Personalized Investment Insights</title>
-    <meta name="description" content="AI-Powered Hyper-Personalized Investment Insights for Dezerv - Your personal financial co-pilot" />
-    <meta name="author" content="Dezerv" />
+    <title>Jar AI Compass - Hyper-Personalized Investment Insights</title>
+    <meta name="description" content="AI-Powered Hyper-Personalized Investment Insights for Jar - Your personal financial co-pilot" />
+    <meta name="author" content="Jar" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
-    <meta property="og:title" content="Dezerv AI Compass - Hyper-Personalized Investment Insights" />
-    <meta property="og:description" content="AI-Powered Hyper-Personalized Investment Insights for Dezerv - Your personal financial co-pilot" />
+    <meta property="og:title" content="Jar AI Compass - Hyper-Personalized Investment Insights" />
+    <meta property="og:description" content="AI-Powered Hyper-Personalized Investment Insights for Jar - Your personal financial co-pilot" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
