Update: content, layout, and documentation for Placement Fast Lane case study

--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/jar-product-case-study/" />
+    <meta http-equiv="refresh" content="0; url=/newton-school-placement-fast-lane/" />
     <script>
       // For client-side routing (React Router, etc.)
       var l = window.location;
-      var path = l.pathname.replace(/\/+/g, '/').replace('/jar-product-case-study', '');
-      window.location.replace('/jar-product-case-study/#' + path + l.search + l.hash);
+      var path = l.pathname.replace(/\/+/g, '/').replace('/newton-school-placement-fast-lane', '');
+      window.location.replace('/newton-school-placement-fast-lane/#' + path + l.search + l.hash);
     </script>
   </head>
   <body></body>
